--- a/source/repos/BTL_Food/BTL_Food/bin/BTL_Food.dll.config
+++ b/source/repos/BTL_Food/BTL_Food/bin/BTL_Food.dll.config
@@ -28,6 +28,14 @@
 	<system.web>
 		<compilation debug="true" targetFramework="4.7.2" />
 		<httpRuntime targetFramework="4.7.2" />
+		<pages>
+			<namespaces>
+				<add namespace="System.Web.Optimization" />
+			</namespaces>
+			<controls>
+				<add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
+			</controls>
+		</pages>
 	</system.web>
 	<system.codedom>
 		<compilers>
